public class Main  {

    Circle circulito = new Circle(1.0, "red", true){
    };

    Rectangle rectangle = new Rectangle(1.0, 1.0, "red", true){
    };

}
